packages/sprack/crates/sprack/src/snapshots/sprack__test_render__tests__empty_state_full_120x24.snap
---
source: crates/sprack/src/test_render.rs
expression: output
---
                                                            âSelect a pane to view details
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
 [poller: not started] | j/k:nav  h/l:collapse  enter:focus  q/^C:quit
