packages/sprack/crates/sprack/src/snapshots/sprack__test_render__tests__empty_state_standard_50x24.snap
---
source: crates/sprack/src/test_render.rs
expression: output
---

 [poller: not started] | j/k:nav  h/l:collapse  en
