packages/sprack/crates/sprack/src/snapshots/sprack__test_render__tests__error_integration_full_120x30.snap
---
source: crates/sprack/src/test_render.rs
expression: output
---
â¼ LOCAL
  â¼ dev (1w)
    â¼ editor (1 panes) *
        claude/unnamed [error]
          opus-4-6 | 156K/200K | 0 subagents
          Tasks: 0/1 done  >Fix renderiâ¦
 [poller: not started] | j/k:nav  h/l:collapse  enter:focus  q/^C:quit
