packages/sprack/crates/sprack/src/snapshots/sprack__test_render__tests__multi_session_full_120x30.snap
---
source: crates/sprack/src/test_render.rs
expression: output
---
â¼ REMOTE-APP
  â¼ remote-app (1w) [remote-app]
    â¼ code (1 panes) *
        claude/sprack-trouble [thinking]
          opus-4-6 | 450K/1M | 2 subagents
          sprack TUI development
          Tasks: 1/2 done  >Fix renderiâ¦ âAdd tests
â¼ LOCAL
  â¼ dev (2w) attached
    â¼ editor (2 panes) *
        * bash (bash) [80x24] pid:1234 /home/user
          nvim (nvim) [80x24] pid:1234 /home/user
    â¼ terminal (1 panes)
        * bash (bash) [80x24] pid:1234 /home/user
 [poller: not started] | j/k:nav  h/l:collapse  enter:focus  q/^C:quit
