packages/sprack/crates/sprack/src/snapshots/sprack__test_render__tests__multi_session_standard_45x24.snap
---
source: crates/sprack/src/test_render.rs
expression: output
---
â¼ REMOTE-APP
  â¼ remote-app (1w)
    â¼ code (1 panes)
        * bash [thinking] 2ag 45%
â¼ LOCAL
  â¼ dev (2w)
    â¼ editor (2 panes)
        * bash
          nvim
    â¼ terminal (1 panes)
        * bash
 [poller: not started] | j/k:nav  h/l:collaps
