packages/sprack/crates/sprack/src/snapshots/sprack__test_render__tests__selected_pane_detail_120x30.snap
---
source: crates/sprack/src/test_render.rs
expression: output
---
  â¼ LOCAL                                                   âclaude-opus-4-6 [thinking...]
    â¼ dev (1w)                                              âctx: 45%  agents: 2
      â¼ editor (1 panes)                                    âtool: Read
>         * bash [thinking] 2ag 45%                         âtasks: 2
                                                            â[ ] Fix rendering
                                                            â[ ] Add tests
                                                            âupdated: <TIMESTAMP>
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
 [poller: not started] | j/k:nav  h/l:collapse  enter:focus  q/^C:quit
