packages/sprack/crates/sprack/src/snapshots/sprack__test_render__tests__single_session_compact_25x20.snap
---
source: crates/sprack/src/test_render.rs
expression: output
---
â¼ LOCAL
  â¼ dev (1w)
    â¼ editor (1 panes)
        * bash/dev [think
 [poller: not started] |
