packages/sprack/crates/sprack/src/snapshots/sprack__test_render__tests__single_session_full_120x30.snap
---
source: crates/sprack/src/test_render.rs
expression: output
---
â¼ LOCAL                                                     âSelect a pane to view details
  â¼ dev (1w)                                                â
    â¼ editor (1 panes)                                      â
        * bash [thinking] 2ag 45%                           â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
                                                            â
 [poller: not started] | j/k:nav  h/l:collapse  enter:focus  q/^C:quit
