packages/sprack/crates/sprack/src/snapshots/sprack__test_render__tests__single_session_standard_45x20.snap
---
source: crates/sprack/src/test_render.rs
expression: output
---
â¼ LOCAL
  â¼ dev (1w)
    â¼ editor (1 panes)
        * claude/sprack-troubâ¦ [thinking] 2ag
 [poller: not started] | j/k:nav  h/l:collaps
