packages/sprack/crates/sprack/src/snapshots/sprack__test_render__tests__single_session_wide_80x20.snap
---
source: crates/sprack/src/test_render.rs
expression: output
---
â¼ LOCAL
  â¼ dev (1w) attached
    â¼ editor (1 panes) *
        bash/sprack-trouble [thinking]
          opus-4-6 | 450K/1M | 2 subagents
          sprack TUI development
          Tasks: 1/2 done  >Fix renderiâ¦ âAdd tests
 [poller: not started] | j/k:nav  h/l:collapse  enter:focus  q/^C:quit
