packages/sprack/crates/sprack/src/snapshots/sprack__test_render__tests__stale_poller_80x20.snap
---
source: crates/sprack/src/test_render.rs
expression: output
---
â¼ LOCAL
  â¼ dev (1w)
    â¼ editor (1 panes)
        * bash/sprack-trouble [thinking] 2ag 450K/1M
 [poller: not started] | j/k:nav  h/l:collapse  enter:focus  q/^C:quit
